Another release candidates.  All reviewers comments have been addressed.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,12 +1,31 @@
 \begin{abstract}
-  Datacenters are being constructed at a rapid pace.  Concurrently, offsetting renewable power plants are also being built to mitigate the environmental impact of the new datacenters.
+  Datacenters are being constructed at a rapid pace.  Concurrently,
+  offsetting renewable power plants are also being built to mitigate
+  the environmental impact of the new datacenters' massive energy
+  consumption.
 %These renewable power plants may or may not be co-located with datacenters.
-  Research efforts that have studied how to best place new datacenters and renewable power plants have mostly neglected the impact on the electricity transmission grid.
-%With rapidly increasing penetration of such ``renewable powered datacenters,'' it is becoming imperative to study their impact on the tranmission grid.
-  In this paper, we show that accounting for the impact on the transmission grid
+  Research efforts that have studied how to best place new datacenters
+  and renewable power plants have mostly neglected the impact on the
+  electricity transmission grid.
+%With rapidly increasing penetration of such ``renewable powered datacenters,'' it is becoming imperative to study their impact on the transmission grid.
+  In this paper, we show that accounting for the impact on the
+  transmission grid
 % when placing new datacenters and renewable power plants
-can be mutually beneficial to both datacenter owners and grid operators.  Specifically, locating datacenters and renewable power plants at strategic places in the grid could help to minimize (i) overloading of transmission lines, (ii) grid voltage variations outside the acceptable range, and (iii) transmission system losses.  We develop an optimization framework for placing a new datacenter and offsetting wind farm, and use it in a case study to show that considering transmission losses can lead to different placements and lower overall cost.  Interestingly, co-locating the datacenter and wind farm does not always lead to lowest impact on the transmission grid and lowest overall cost.  Thus, we conclude that the impact of location on the costs of {\em both} the datacenter owners and grid operators should be considered when placing 
-new datacenters and offsetting renewable power plants.
+can be mutually beneficial to both datacenter owners and grid
+operators.  Specifically, locating datacenters and renewable power
+plants at strategic places in the grid could help to minimize (i)
+overloading of transmission lines, (ii) grid voltage variations
+outside the acceptable range, and (iii) transmission system losses.
+We develop an optimization framework for placing a new datacenter and
+offsetting wind farm, and use it in a case study to show that
+considering transmission losses along with datacenter costs
+ can lead to different placements and
+lower overall cost.  Interestingly, co-locating the datacenter and
+wind farm does not always lead to lowest impact on the transmission
+grid and lowest overall cost.  Thus, we conclude that the impact of
+location on the costs of {\em both} the datacenter owners and grid
+operators should be considered when placing new datacenters and
+offsetting renewable power plants.
 \end{abstract}
 
 
