--- a/paper.tex
+++ b/paper.tex
@@ -20,7 +20,7 @@
 \usepackage{algpseudocode}
 \usepackage{amssymb}
 %\usepackage{slashbox}
-\usepackage[colorlinks=true,citecolor=blue,pagebackref=true]{hyperref}
+%\usepackage[colorlinks=true,citecolor=blue,pagebackref=true]{hyperref}
 
 
 \definecolor{orange}{rgb}{1.0,0.3,0.0}
